@@ -26,6 +26,7 @@ Release 0.19.0 - Unreleased
    HBASE-925   HRS NPE on way out if no master to connect to
    HBASE-928   NPE throwing RetriesExhaustedException
    HBASE-924   Update hadoop in lib on 0.18 hbase branch to 0.18.1
+   HBASE-929   Clarify that ttl in HColumnDescriptor is seconds
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
